--- a/source/index.html
+++ b/source/index.html
@@ -97,7 +97,7 @@
       <h2 class="search__title">Заинтересовались?</h2>
       <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
         седоне</p>
-      <button class="search__button button" type="submit">Найти гостиницу</button>
+      <a class="search__button button" href="#">Найти гостиницу</a>
     </div>
   </section>
 
