--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,9 +45,7 @@
   <section class="content">
     <div class="content__wrapper">
       <h2 class="content__title">Фото и видео</h2>
-      <p class="content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
-        политике и экономике.</p>
-
+      <p class="content__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       <ul class="content__list gallery">
         <li class="gallery__item">
           <a class="galerry__link" href="#">
