--- a/source/index.html
+++ b/source/index.html
@@ -95,8 +95,7 @@
   <section class="search">
     <div class="search__wrapper">
       <h2 class="search__title">Заинтересовались?</h2>
-      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
-        седоне</p>
+      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
       <a class="search__button button" href="#">Найти гостиницу</a>
     </div>
   </section>
@@ -105,9 +104,8 @@
     <div class="location__wrapper">
       <h2 class="visually-hidden">Местоположение Седоны</h2>
       <img class="location__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Местоположение Седоны на карте">
-      <iframe class="location__map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
   </section>
@@ -115,7 +113,7 @@
 
 <footer class="main-footer">
   <div class="main-footer__wrapper">
-      <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
+    <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
     <section class="main-footer__social social">
       <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social__list">
